kubernetes/apps/redis-insight/service.yaml
# Redis Insight service with name 'redisinsight-service'
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5540
  selector:
    app: redisinsight
