kubernetes/apps/redis-insight/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-ingress
  namespace: redisinsight
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-selfsigned-prod
spec:
  ingressClassName: nginx
  rules:
    - host: redisinsight.70ld.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight-service
                port:
                  number: 80
  tls:
    - hosts:
        - redisinsight.70ld.home
      secretName: letsencrypt-selfsigned-secret
